Fixes css overflowing with subtitle

--- a/css/home.css
+++ b/css/home.css
@@ -7,7 +7,7 @@
 
 .jumbo {
   position: relative;
-  height: 20em;
+  height: 25em;
   width: 100%;
   display: flex;
   flex-flow: column;
